# storm-tracker

./: .ecmwf.py.swp  .ecmwfapirc  .gitignore  .pre-commit-config.yaml  Dev Testing: Plotting with Tropycal.ipynb  README.md  Storm Tracking with Tropycal.ipynb  app.py  ecmwf.py  fly.py  generate_storm_plots.py  hafs.py  mappy.py  models.py  plot.py  pyproject.toml
.github/workflows/: actions-ec2.yml
api_app/: models.py
api_app/controllers/: storm.py
config/: config.py
